some visual improvements to color picker

--- a/wildcatweb/src/features/commandPanel/dashboards/colorSensor/styles/ColorSensorDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/colorSensor/styles/ColorSensorDash.module.css
@@ -194,9 +194,10 @@
 }
 
 .paletteLabel {
-    font-size: var(--font-size-sm);
+    font-size: var(--font-size-lg);
     color: var(--panel-text);
-    margin-bottom: var(--spacing-2);
+    text-align: center;
+    margin-top: var(--spacing-2);
     opacity: 0.8;
 }
 
