--- a/wildcatweb/src/features/commandPanel/dashboards/colorSensor/styles/ColorSensorDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/colorSensor/styles/ColorSensorDash.module.css
@@ -272,6 +272,8 @@
 
 .noSensors svg {
     animation: pulse 2s infinite;
+    width: calc(var(--font-size-sm) * 1.5);
+    height: calc(var(--font-size-sm) * 1.5);
 }
 
 @keyframes pulse {
