--- a/wildcatweb/src/features/commandPanel/dashboards/motor/styles/MotorDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/motor/styles/MotorDash.module.css
@@ -247,6 +247,8 @@
 .noConnection svg,
 .noMotors svg {
     animation: pulse 2s infinite;
+    width: calc(var(--font-size-sm) * 1.5);
+    height: calc(var(--font-size-sm) * 1.5);
 }
 
 @keyframes pulse {
